# picsum-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  linting.yml
src/: api.rs  lib.rs
src/endpoints/: details.rs  image.rs  mod.rs  random.rs
