[package]
name = "picsum-rs"
version = "0.1.0"
edition = "2024"
authors = ["dleutenegger"]
keywords = ["api", "picsum"]
license = "MIT"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
thiserror = "2.0.17"
typed-builder = "0.23.2"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.4"
